--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         <div class="buttons-container">
             <button id="clear">AC</button>
             <button id="sign">+/-</button>
-            <button id="percent">%</button>
-            <button id="/">/</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button id="*">*</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="-">-</button>
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button id="+">+</button>
-            <button id="backspace">back space</button>
-            <button id="0">0</button>
+            <button class="operator" id="percent">%</button>
+            <button class="operator" id="/">/</button>
+            <button class="number" id="7">7</button>
+            <button class="number" id="8">8</button>
+            <button class="number" id="9">9</button>
+            <button class="operator" id="*">*</button>
+            <button class="number" id="4">4</button>
+            <button class="number" id="5">5</button>
+            <button class="number" id="6">6</button>
+            <button class="operator" id="-">-</button>
+            <button class="number" id="1">1</button>
+            <button class="number" id="2">2</button>
+            <button class="number" id="3">3</button>
+            <button class="operator" id="+">+</button>
+            <button class="number" id="backspace">back space</button>
+            <button class="number" id="0">0</button>
             <button id=".">.</button>
             <button id="=">=</button>
         </div>
