Add answer id to input container

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="input-container">
             <!--Here is where the calculated
                 numbers will be shown!-->
-                <h1>1210</h1>
+                <h1 id="answer">1210</h1>
         </div>
 
         <div class="buttons-container">
@@ -55,7 +55,7 @@
             <button class="number" id="backspace">back space</button>
             <button class="number" id="0">0</button>
             <button id=".">.</button>
-            <button id="=">=</button>
+            <button class="operator" id="=">=</button>
         </div>
 
     </div>
