Remove backspace button from number class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="input-container">
             <!--Here is where the calculated
                 numbers will be shown!-->
-                <h1 id="answer">1210</h1>
+                <h1 id="answer">0</h1>
         </div>
 
         <div class="buttons-container">
@@ -52,7 +52,7 @@
             <button class="number" id="2">2</button>
             <button class="number" id="3">3</button>
             <button class="operator" id="+">+</button>
-            <button class="number" id="backspace">back space</button>
+            <button id="backspace">back space</button>
             <button class="number" id="0">0</button>
             <button id=".">.</button>
             <button class="operator" id="=">=</button>
